# AnalisisHTML

./: .gitignore  CMakeLists.txt  htmlInfo.txt  index.html  main.cpp
src/: main.cpp
src/graphics/: terminalUI.cpp  terminalUI.hpp
src/logic/: engine.cpp  engine.hpp  obtenerEtiquetasAtributos.hpp  obtenerEtiquetasPermitidas.hpp
src/storage/: archive.cpp  archive.hpp  htmlInfo.cpp  htmlInfo.hpp
